Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-76424

rhi\qrhivulkan.cpp build failed on mingw 64bit

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 5.14
    • 5.14.0 Alpha
    • GUI: Vulkan
    • None
    • Windows

      https://codereview.qt-project.org/c/qt/qt5/+/265195 Update submodules on 'dev' in qt5 - PS6

      https://testresults.qt.io/coin/integration/qt/qt5/tasks/1560802853

      https://testresults.qt.io/coin/api/results/qt/qtbase/a4134415a3849cfb857942e698514be9da18924f/WindowsWindows_10x86_64WindowsWindows_10x86_64Mingw73qtci-windows-10-x86_64-14-4b2495DisableTests/09086a8c7d8f2cda02ac7705b568d3e311e093c6/build_1560802948/log.txt.gz

      agent:2019/06/17 21:09:05 build.go:197: g++ -c -include .pch\release\release\qt_gui_pch.h -fno-keep-inline-dllexport -O3 -std=c++1z -fno-exceptions -Wall -Wextra -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DWINVER=0x0601 -D_WIN32_WINNT=0x0601 -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_GUI_LIB -DQT_BUILDING_QT -D_CRT_SECURE_NO_WARNINGS -D_USE_MATH_DEFINES -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_NO_EXCEPTIONS -DQT_NO_DEBUG -DQT_CORE_LIB -I. -I..\3rdparty\md4c -I..\3rdparty\VulkanMemoryAllocator -I..\..\include -I..\..\include\QtGui -I..\..\include\QtANGLE -I..\..\include\QtGui\5.14.0 -I..\..\include\QtGui\5.14.0\QtGui -Itmp -I.tracegen\release -I..\..\include\QtCore\5.14.0 -I..\..\include\QtCore\5.14.0\QtCore -I..\..\include\QtCore -I.moc\release\release -IC:\VulkanSDK\1.0.51.0\include -I..\3rdparty\libpng -I..\3rdparty\harfbuzz-ng\include -IC:\openssl\include -IC:\Utils\my_sql\mysql-5.7.25-winx64\include -IC:\Utils\postgresql\pgsql\include -I..\..\mkspecs\win32-g++  -o .obj\release\release\qrhivulkan.o rhi\qrhivulkan.cpp
      agent:2019/06/17 21:09:05 build.go:197: g++ -c -include .pch\release\release\qt_gui_pch.h -fno-keep-inline-dllexport -O3 -std=c++1z -fno-exceptions -Wall -Wextra -Wextra -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -Wno-stringop-overflow -DUNICODE -D_UNICODE -DWIN32 -DMINGW_HAS_SECURE_API=1 -DWINVER=0x0601 -D_WIN32_WINNT=0x0601 -DQT_NO_USING_NAMESPACE -DQT_NO_FOREACH -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_GUI_LIB -DQT_BUILDING_QT -D_CRT_SECURE_NO_WARNINGS -D_USE_MATH_DEFINES -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x040800 -DQT_DEPRECATED_WARNINGS_SINCE=0x060000 -DQT_NO_EXCEPTIONS -DQT_NO_DEBUG -DQT_CORE_LIB -I. -I..\3rdparty\md4c -I..\3rdparty\VulkanMemoryAllocator -I..\..\include -I..\..\include\QtGui -I..\..\include\QtANGLE -I..\..\include\QtGui\5.14.0 -I..\..\include\QtGui\5.14.0\QtGui -Itmp -I.tracegen\release -I..\..\include\QtCore\5.14.0 -I..\..\include\QtCore\5.14.0\QtCore -I..\..\include\QtCore -I.moc\release\release -IC:\VulkanSDK\1.0.51.0\include -I..\3rdparty\libpng -I..\3rdparty\harfbuzz-ng\include -IC:\openssl\include -IC:\Utils\my_sql\mysql-5.7.25-winx64\include -IC:\Utils\postgresql\pgsql\include -I..\..\mkspecs\win32-g++  -o .obj\release\release\qrhid3d11.o rhi\qrhid3d11.cpp
      agent:2019/06/17 21:09:07 build.go:197: In file included from rhi\qrhivulkan.cpp:47:0:
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3312:13: error: 'SRWLOCK' does not name a type; did you mean 'SIG_BLOCK'?
      agent:2019/06/17 21:09:07 build.go:197:              SRWLOCK m_Lock;
      agent:2019/06/17 21:09:07 build.go:197:              ^~~~~~~
      agent:2019/06/17 21:09:07 build.go:197:              SIG_BLOCK
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h: In constructor 'VmaRWMutex::VmaRWMutex()':
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3306:47: error: 'm_Lock' was not declared in this scope
      agent:2019/06/17 21:09:07 build.go:197:              VmaRWMutex() { InitializeSRWLock(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                                ^~~~~~
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3306:47: note: suggested alternative: 'clock'
      agent:2019/06/17 21:09:07 build.go:197:              VmaRWMutex() { InitializeSRWLock(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                                ^~~~~~
      agent:2019/06/17 21:09:07 build.go:197:                                                clock
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3306:28: error: 'InitializeSRWLock' was not declared in this scope
      agent:2019/06/17 21:09:07 build.go:197:              VmaRWMutex() { InitializeSRWLock(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                             ^~~~~~~~~~~~~~~~~
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h: In member function 'void VmaRWMutex::LockRead()':
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3307:53: error: 'm_Lock' was not declared in this scope
      agent:2019/06/17 21:09:07 build.go:197:              void LockRead() { AcquireSRWLockShared(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                                      ^~~~~~
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3307:53: note: suggested alternative: 'clock'
      agent:2019/06/17 21:09:07 build.go:197:              void LockRead() { AcquireSRWLockShared(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                                      ^~~~~~
      agent:2019/06/17 21:09:07 build.go:197:                                                      clock
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3307:31: error: 'AcquireSRWLockShared' was not declared in this scope
      agent:2019/06/17 21:09:07 build.go:197:              void LockRead() { AcquireSRWLockShared(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                ^~~~~~~~~~~~~~~~~~~~
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h: In member function 'void VmaRWMutex::UnlockRead()':
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3308:55: error: 'm_Lock' was not declared in this scope
      agent:2019/06/17 21:09:07 build.go:197:              void UnlockRead() { ReleaseSRWLockShared(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                                        ^~~~~~
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3308:55: note: suggested alternative: 'clock'
      agent:2019/06/17 21:09:07 build.go:197:              void UnlockRead() { ReleaseSRWLockShared(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                                        ^~~~~~
      agent:2019/06/17 21:09:07 build.go:197:                                                        clock
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3308:33: error: 'ReleaseSRWLockShared' was not declared in this scope
      agent:2019/06/17 21:09:07 build.go:197:              void UnlockRead() { ReleaseSRWLockShared(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                  ^~~~~~~~~~~~~~~~~~~~
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h: In member function 'void VmaRWMutex::LockWrite()':
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3309:57: error: 'm_Lock' was not declared in this scope
      agent:2019/06/17 21:09:07 build.go:197:              void LockWrite() { AcquireSRWLockExclusive(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                                          ^~~~~~
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3309:57: note: suggested alternative: 'clock'
      agent:2019/06/17 21:09:07 build.go:197:              void LockWrite() { AcquireSRWLockExclusive(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                                          ^~~~~~
      agent:2019/06/17 21:09:07 build.go:197:                                                          clock
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3309:32: error: 'AcquireSRWLockExclusive' was not declared in this scope
      agent:2019/06/17 21:09:07 build.go:197:              void LockWrite() { AcquireSRWLockExclusive(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                 ^~~~~~~~~~~~~~~~~~~~~~~
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h: In member function 'void VmaRWMutex::UnlockWrite()':
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3310:59: error: 'm_Lock' was not declared in this scope
      agent:2019/06/17 21:09:07 build.go:197:              void UnlockWrite() { ReleaseSRWLockExclusive(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                                            ^~~~~~
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3310:59: note: suggested alternative: 'clock'
      agent:2019/06/17 21:09:07 build.go:197:              void UnlockWrite() { ReleaseSRWLockExclusive(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                                            ^~~~~~
      agent:2019/06/17 21:09:07 build.go:197:                                                            clock
      agent:2019/06/17 21:09:07 build.go:197: ..\3rdparty\VulkanMemoryAllocator/vk_mem_alloc.h:3310:34: error: 'ReleaseSRWLockExclusive' was not declared in this scope
      agent:2019/06/17 21:09:07 build.go:197:              void UnlockWrite() { ReleaseSRWLockExclusive(&m_Lock); }
      agent:2019/06/17 21:09:07 build.go:197:                                   ^~~~~~~~~~~~~~~~~~~~~~~
      agent:2019/06/17 21:09:09 build.go:197: Mingw32-make[3]: *** [Makefile.Release:76494: .obj/release/release/qrhivulkan.o] Error 1
      

        For Gerrit Dashboard: QTBUG-76424
        # Subject Branch Project Status CR V

            lagocs Laszlo Agocs
            liaqi Liang Qi
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes