vkmemalloc: Disable SRWLOCK for mingw

...until some day someone investigates what is exactly the problem with the
sdk that ships with mingw.

Task-number: QTBUG-76424
Change-Id: I64869a4fbb07a64cfc1430234d732e143fefe720
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>